# project-stuff

./: .gitattributes  .gitignore  README.md  convert.py  convert_voice.py  emotion_model_quant.tflite  sentiment_model.tflite  speech2text.py  test_emotion.py  webcam.py
MyApplication/app/: build.gradle.kts
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/assets/: speech_to_text_asr_quant.tflite
MyApplication/app/src/main/java/com/example/myapplication/: AudioPreprocessor.java  MainActivity.java  ModelConfig.java  TextPreprocessor.java  TfLitePredictor.java  Vocabulary.java
MyApplication/app/src/main/res/layout/: activity_main.xml
MyApplication/gradle/: libs.versions.toml
MyApplication/gradle/wrapper/: gradle-wrapper.properties
QwenPrimer/: README.md  finetune.py  main .py  rag.py  readme.md
WhisperAiApp/MyApplication/app/: build.gradle.kts
WhisperAiApp/MyApplication/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
WhisperAiApp/MyApplication/app/src/main/java/com/example/myapplication/: MainActivity.java  WhisperBridge.java
WhisperAiApp/MyApplication/gradle/wrapper/: gradle-wrapper.properties
converters/: convert_sentimental.py  convert_voice.py  speech2text.py
movie recommendation/: app.py  movie-recommendation-system.Q4_K_M.gguf  recommend.py
